@@ -1,6 +1,10 @@
 ChangeLog
 ==========
 
+- add basic shell script npg_rsync_pacbio_runfolders.sh to take rsync copies of
+  runfolders (for disaster recovery) and add missing standard compile test for perl
+  bin scripts.
+  
 release 3.18
 - Novaseq iRODS path handling
 
